source/stylesheets/_layout.scss
// Sections
// -------------------------
.content {
  @extend .container;
  @extend .text-center;
  padding-bottom: $line-height-computed;

  &#latest,
  &#snapshots {
    border-bottom: 1px solid #eee;
  } //#latest & #snaps

  &#heandshe {
    padding: ($line-height-computed * 2) 0;

    section {
      @extend .row;

      .he,
      .she {
        @extend .text-left;
        @extend .col-md-6;
        padding-left:  $grid-gutter-width;
        padding-right: $grid-gutter-width;

        h2 {
          @extend .text-center;
        }
      } //.he & .she

      .he {
        h2 {
          background: image_url('spatula.png') no-repeat 25% 50%;
        }
      } //.he

      .she {
      }

    } //section
  } //#heandshe


  &#contact-us {
    section {
      @extend .row;

      .valerie, .justin {
        ul {
          @extend .list-inline;
          li {
            padding-right: 0;
          }
        }
      }

      .valerie {
        @extend .col-xs-6;

        @extend .col-sm-3;
        @extend .col-sm-offset-3;

        @extend .col-md-3;
        @extend .col-md-offset-3;

        @extend .col-lg-3;
        @extend .col-lg-offset-3;
      }

      .justin {
        @extend .col-xs-6;
        @extend .col-sm-3;
        @extend .col-md-2;
      }

    } //section
  } //#contact-us

} //.content

#details {
  background-color: $brand-section-bg;
  padding: ($line-height-computed * 2) 0;

  img {
    padding-top: $line-height-computed;
  }
} //#details

footer {
  border-top: ($line-height-computed * 2) $brand-section-bg solid;
  background: $brand-footer-bg image_url('footer-bg.jpg') no-repeat top center;
  min-height: 182px;

  p:first-child {
    margin-top: $line-height-computed;
    margin-bottom: 0;
  }
}

